working endpoints and verified on staging works in AWS ec2
