# services/swagger/swagger.json
@@ -1,171 +1,1 @@
-{
-    "openapi": "3.0.0",
-    "info": {
-        "version": "0.0.1",
-        "title": "Serpent Tracker",
-        "description": "Swagger spec for documenting the serpent api service"
-    },
-    "servers": [
-        {
-            "url": "http://localhost"
-        }
-    ],
-    "paths": {
-        "/api/ping":{
-          "get": {
-            "summary": "Just a sanity check",
-            "responses": {
-              "200": {
-                "description": "Will return 'pong!'"
-              }
-            }
-          }
-        },
-        "/api/users":{
-            "get": {
-              "summary": "Returns all users",
-              "responses": {
-                "200": {
-                  "description": "user object"
-                }
-              }
-            },
-            "post": {
-              "summary": "Adds a new user",
-              "requestBody": {
-                "description": "User to add",
-                "required": true,
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "$ref": "#/components/schemas/user-full"
-                    }
-                  }
-                }
-              },
-              "security": [
-                {
-                  "bearerAuth": []
-                }
-              ],
-              "responses": {
-                "200": {
-                  "description": "User added"
-                }
-              }
-            }
-          },
-          "/api/users/{id}":{
-            "get": {
-              "summary": "Returns a user based on a single user ID",
-              "parameters": [
-                  {
-                    "name": "id",
-                    "in": "path",
-                    "description": "ID of user to fetch",
-                    "required": true,
-                    "schema": {
-                        "type": "integer",
-                        "format": "int64"
-                    }
-                  }
-              ],
-              "responses": {
-                "200": {
-                  "description": "user object"
-                }
-              }
-            }
-          },
-          "/auth/register": {
-            "post": {
-              "summary": "Creates a new user",
-              "requestBody": {
-                "description": "User to add",
-                "required": true,
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "$ref": "#/components/schemas/user-full"
-                    }
-                  }
-                }
-              },
-              "responses": {
-                "200": {
-                  "description": "user object"
-                }
-              }
-            }
-          },
-          "/auth/login": {
-            "post": {
-              "summary": "Logs a user in",
-              "requestBody": {
-                "description": "User to log in",
-                "required": true,
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "$ref": "#/components/schemas/user"
-                    }
-                  }
-                }
-              },
-              "responses": {
-                "200": {
-                  "description": "Successfully logged in"
-                }
-              }
-            }
-          },
-          "/auth/status": {
-            "get": {
-              "summary": "Returns the logged in user's status",
-              "security": [
-                {
-                  "bearerAuth": []
-                }
-              ],
-              "responses": {
-                "200": {
-                  "description": "user object"
-                }
-              }
-            }
-          }
-    },
-    "components": {
-      "securitySchemes": {
-        "bearerAuth": {
-          "type": "http",
-          "scheme": "bearer"
-        }
-      },
-      "schemas": {
-        "user": {
-          "properties": {
-            "email": {
-              "type": "string"
-            },
-            "password": {
-              "type": "string"
-            }
-          }
-        },
-        "user-full": {
-          "properties": {
-            "username": {
-              "type": "string"
-            },
-            "email": {
-              "type": "string"
-            },
-            "password": {
-              "type": "string"
-            }
-          }
-        }
-      }
-    }
-}
+{"info": {"version": "0.0.1", "description": "Swagger spec for documenting the serpent api service", "title": "Serpent Tracker"}, "paths": {"/auth/register": {"post": {"requestBody": {"content": {"application/json": {"schema": {"$ref": "#/components/schemas/user-full"}}}, "required": true, "description": "User to add"}, "responses": {"200": {"description": "user object"}}, "summary": "Creates a new user"}}, "/auth/login": {"post": {"requestBody": {"content": {"application/json": {"schema": {"$ref": "#/components/schemas/user"}}}, "required": true, "description": "User to log in"}, "responses": {"200": {"description": "Successfully logged in"}}, "summary": "Logs a user in"}}, "/api/users/{id}": {"get": {"responses": {"200": {"description": "user object"}}, "parameters": [{"schema": {"type": "integer", "format": "int64"}, "description": "ID of user to fetch", "required": true, "name": "id", "in": "path"}], "summary": "Returns a user based on a single user ID"}}, "/api/ping": {"get": {"responses": {"200": {"description": "Will return 'pong!'"}}, "summary": "Just a sanity check"}}, "/auth/status": {"get": {"security": [{"bearerAuth": []}], "responses": {"200": {"description": "user object"}}, "summary": "Returns the logged in user's status"}}, "/api/users": {"post": {"requestBody": {"content": {"application/json": {"schema": {"$ref": "#/components/schemas/user-full"}}}, "required": true, "description": "User to add"}, "security": [{"bearerAuth": []}], "responses": {"200": {"description": "User added"}}, "summary": "Adds a new user"}, "get": {"responses": {"200": {"description": "user object"}}, "summary": "Returns all users"}}}, "servers": [{"url": "http://52.91.34.27"}], "components": {"securitySchemes": {"bearerAuth": {"scheme": "bearer", "type": "http"}}, "schemas": {"user-full": {"properties": {"username": {"type": "string"}, "password": {"type": "string"}, "email": {"type": "string"}}}, "user": {"properties": {"password": {"type": "string"}, "email": {"type": "string"}}}}}, "openapi": "3.0.0"}
